<resources>
    <string name="app_name">Exercice1</string>
    <string name="titre">Formulaire de connexion</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="vider">Vider</string>
    <string name="envoyer">Envoyer</string>
    <string name="title_activity_connected">Connected</string>
    <string name="hello">Bonjour </string>
    <string name="logout">Déconnexion</string>
</resources>
