<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.excilys.exercice1.MainActivity"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0ad6e1"
        android:id="@+id/headerLayout"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/titre"
            android:id="@+id/textView"
            android:textColor="#ffffff"
            android:paddingLeft="15dp"
            android:textSize="25dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/headerLayout"
        android:layout_alignLeft="@+id/headerLayout"
        android:layout_alignStart="@+id/headerLayout"
        android:layout_above="@+id/footerLayout"
        android:background="#ffffff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/headerLayout"
            android:layout_centerHorizontal="true"
            android:id="@+id/contentLayout"
            android:background="#ffffffff"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/username"
                android:id="@+id/label_username"
                android:paddingBottom="3dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:background="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/password"
                android:id="@+id/label_password"
                android:paddingTop="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:layout_gravity="center_horizontal" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:id="@+id/footerLayout"
        android:baselineAligned="false"
        android:weightSum="1"
        android:paddingBottom="10dp">

        <Button
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:text="@string/vider"
            android:id="@+id/button_vider"
            android:layout_weight="0.35"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:background="#ffffff"
            android:onClick="viderListener"
            />

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/envoyer"
            android:id="@+id/button_envoyer"
            android:layout_alignParentBottom="true"
            android:layout_weight="0.54"
            android:layout_marginLeft="10dp"
            android:layout_gravity="right"
            android:background="#ffffff"
            android:onClick="sendListener"/>

    </LinearLayout>


</RelativeLayout>
